@@ -1,3 +1,9 @@
+2015-07-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* tool/average_formation.cpp:
+	- 平均フォーメーションにベースのRoleTypeとMarkerをセットしていなかっ
+	た不具合を修正
+
 2014-07-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/edit_data.cpp:
